--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "author": "Ethan Brown <e@zepln.com>",
   "license": "GPL, MIT",
+  "repository":
+    {
+      "type": "git",
+      "url": "https://github.com/atlas2308/meadowlark.git",
+    }
   "bugs": {
     "url": "https://github.com/EthanRBrown/web-development-with-node-and-express/issues"
   },
