--- a/package.json
+++ b/package.json
@@ -3,25 +3,19 @@
   "version": "0.0.0",
   "description": "Sample website for Web Development with Node and Express (O'Reilly).",
   "main": "meadowlark.js",
-  "scripts": {
+  "scripts":
+    {
       "start": "node meadowlark.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/EthanRBrown/web-development-with-node-and-express.git"
-  },
-  "author": "Ethan Brown <e@zepln.com>",
+    },
+  "author": "Zaphod Beeblebrox",
   "license": "GPL, MIT",
   "repository":
     {
       "type": "git",
       "url": "https://github.com/atlas2308/meadowlark.git",
-    }
-  "bugs": {
-    "url": "https://github.com/EthanRBrown/web-development-with-node-and-express/issues"
-  },
-  "homepage": "https://github.com/EthanRBrown/web-development-with-node-and-express",
+    },
+
   "dependencies": {
     "express": "~4.15.2",
     "express-handlebars": "~3.0.0"
